# reddit-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  openapi.json  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 60e4b334f2c0_init_revision.py  7d6233f84602_add_index_for_config_id_state_updated_.py  91ef27f17961_init_migration.py  e086d98894e8_add_agent_type_enum_column.py  f8fe86eb25b8_init_migration.py
prompts/summarization/: system.md
prompts/system/: search_agent.md
scripts/: docker-entrypoint.sh
src/: app_context.py  dependencies.py  main.py
src/agentapi/: __init__.py  app_context.py  dependencies.py  main.py  module.py  settings.py
src/agents/: __init__.py
src/app/: app_module.py  main.py  settings.py
src/config/: config.py
src/core/: __init__.py
src/insights/: app_context.py  dependencies.py  main.py  module.py  settings.py
src/models/: __init__.py  agent.py
src/reddit_agent/: main.py  reddit.py
src/repositories/: __init__.py  agent.py
src/routes/: __init__.py  agent_configurations.py
src/scheduler/: __init__.py  agent_executor.py  main.py  module.py  scheduler.py  scheduler_app_context.py  scheduler_service.py  settings.py
src/schemas/: __init__.py  agent.py  agent_execution.py
src/search_agent/: models.py  search_agent.py
src/services/: __init__.py  agent.py  scheduler.py
templates/insights/: main.html
tests/: __init__.py  conftest.py  test_reddit_search_integration.py  test_reddit_tools_unit.py  test_search_agent.py
(+88 files in other folders)
