[project]
name = "reddit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "praw>=7.7.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.5.3",
    "langchain[openai]>=0.3.26",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
    "asyncpraw>=7.8.1",
]
