[project]
name = "reddit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0.0",
    "praw>=7.7.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.5.3",
    "langchain[openai]>=0.3.26",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.4",
    "asyncpraw>=7.8.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
